Exercise2_06/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: logoutputping-svc
spec:
  type: ClusterIP
  selector:
    app: logoutputping # This is the app as declared in the Deployment
  ports:
    - name: logoutput-port
      port: 2345 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 8080 # This is the target port
    - name: pingpong-port
      port: 2346 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 8081 # This is the target port
